fix: horizontal scrollbar (#134)

--- a/package/styles/index.css
+++ b/package/styles/index.css
@@ -6,7 +6,6 @@
 @tailwind utilities;
 
 @layer base {
-
   ul,
   ol {
     list-style: revert;
@@ -47,7 +46,6 @@ body {
 }
 
 .fortune-read-only {
-
   .luckysheet-rich-text-editor,
   .luckysheet-sheets-item-function,
   .fortune-sheettab-button,
@@ -70,10 +68,10 @@ body {
   }
 
   /* Hide edit and remove buttons in link toolbar but keep "Open link" */
-  .fortune-link-modify-modal.link-toolbar .fortune-toolbar-button:not(:first-child) {
+  .fortune-link-modify-modal.link-toolbar
+    .fortune-toolbar-button:not(:first-child) {
     display: none !important;
   }
-
 }
 
 .fortune-tooltip {
@@ -166,4 +164,8 @@ body {
   right: 0;
   bottom: 0;
   z-index: 1000;
+}
+
+.luckysheet-scrollbar-x {
+  bottom: 12px !important;
 }
